AP-18197: Implement materialize in comp graph
And related changes.