@@ -48,23 +48,32 @@
  */
 package org.knime.core.table.virtual;
 
+import static org.knime.core.table.virtual.spec.SelectColumnsTransformSpec.indicesAfterDrop;
+import static org.knime.core.table.virtual.spec.SelectColumnsTransformSpec.indicesAfterKeepOnly;
+
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
+import org.knime.core.table.access.ReadAccess;
+import org.knime.core.table.access.WriteAccess;
 import org.knime.core.table.schema.ColumnarSchema;
 import org.knime.core.table.schema.DataSpec;
 import org.knime.core.table.schema.traits.DataTraits;
 import org.knime.core.table.virtual.spec.AppendMissingValuesTransformSpec;
 import org.knime.core.table.virtual.spec.AppendTransformSpec;
-import org.knime.core.table.virtual.spec.ColumnFilterTransformSpec;
+import org.knime.core.table.virtual.spec.MapTransformSpec.MapperWithRowIndexFactory;
+import org.knime.core.table.virtual.spec.MapTransformSpec.MapperWithRowIndexFactory.Mapper;
+import org.knime.core.table.virtual.spec.ProgressListenerTransformSpec.ProgressListenerFactory;
+import org.knime.core.table.virtual.spec.ProgressListenerTransformSpec.ProgressListenerWithRowIndexFactory;
+import org.knime.core.table.virtual.spec.ProgressListenerTransformSpec.ProgressListenerWithRowIndexFactory.ProgressListener;
+import org.knime.core.table.virtual.spec.SelectColumnsTransformSpec;
 import org.knime.core.table.virtual.spec.ConcatenateTransformSpec;
 import org.knime.core.table.virtual.spec.MapTransformSpec;
 import org.knime.core.table.virtual.spec.MapTransformSpec.MapperFactory;
-import org.knime.core.table.virtual.spec.PermuteTransformSpec;
+import org.knime.core.table.virtual.spec.MaterializeTransformSpec;
 import org.knime.core.table.virtual.spec.RowFilterTransformSpec;
 import org.knime.core.table.virtual.spec.RowFilterTransformSpec.RowFilterFactory;
 import org.knime.core.table.virtual.spec.SliceTransformSpec;
@@ -166,6 +175,10 @@ public final class VirtualTable {
         return new VirtualTable(new TableTransform(transforms, transformSpec), schema);
     }
 
+    public VirtualTable append(final VirtualTable table) {
+        return append(List.of(table));
+    }
+
     private List<ColumnarSchema> collectSchemas(final List<VirtualTable> tables) {
         final List<ColumnarSchema> schemas = new ArrayList<>(1 + tables.size());
         schemas.add(m_schema);
@@ -184,7 +197,7 @@ public final class VirtualTable {
         final AppendMissingValuesTransformSpec transformSpec =
             new AppendMissingValuesTransformSpec(columns.toArray(DataSpec[]::new), traits.toArray(DataTraits[]::new));
         final ColumnarSchema schema = ColumnarSchemas.append(List.of(m_schema, transformSpec.getAppendedSchema()));
-        return new VirtualTable(new TableTransform(List.of(m_transform), transformSpec), schema);
+        return new VirtualTable(new TableTransform(m_transform, transformSpec), schema);
     }
 
     public VirtualTable concatenate(final List<VirtualTable> tables) {
@@ -195,27 +208,67 @@ public final class VirtualTable {
         return new VirtualTable(new TableTransform(transforms, transformSpec), schema);
     }
 
-    public VirtualTable filterColumns(final int... columnIndices) {
-        final TableTransformSpec transformSpec = new ColumnFilterTransformSpec(columnIndices);
-        final ColumnarSchema schema = ColumnarSchemas.filter(m_schema, columnIndices);
-        return new VirtualTable(new TableTransform(Arrays.asList(m_transform), transformSpec), schema);
+    public VirtualTable concatenate(final VirtualTable table) {
+        return concatenate(List.of(table));
     }
 
-    public VirtualTable permute(final int... permutation) {
-        final TableTransformSpec transformSpec = new PermuteTransformSpec(permutation);
-        final ColumnarSchema schema = ColumnarSchemas.permute(m_schema, permutation);
-        return new VirtualTable(new TableTransform(List.of(m_transform), transformSpec), schema);
+    @Deprecated
+    public VirtualTable filterColumns(final int... columnIndices) {
+        return keepOnlyColumns(columnIndices);
+    }
 
+    @Deprecated
+    public VirtualTable permute(final int... permutation) {
+        return selectColumns(permutation);
+    }
+
+    /**
+     * Create virtual table containing only the columns specified by {@code
+     * columnIndices} in the specified order.
+     *
+     * @param columnIndices indices of the columns to select
+     * @return virtual table containing only the specified columns, in the specified order.
+     */
+    public VirtualTable selectColumns(final int... columnIndices) {
+        final TableTransformSpec transformSpec = new SelectColumnsTransformSpec(columnIndices);
+        final ColumnarSchema schema = ColumnarSchemas.select(m_schema, columnIndices);
+        return new VirtualTable(new TableTransform(m_transform, transformSpec), schema);
+    }
+
+    /**
+     * Create virtual table containing all columns of this table, except the
+     * ones specified by {@code columnIndices}.
+     *
+     * @param columnIndices indices of the columns to drop. may be in any order and contain duplicates.
+     * @return virtual table where the specified columns have been removed
+     */
+    public VirtualTable dropColumns(final int... columnIndices) {
+        return selectColumns(indicesAfterDrop(m_schema.numColumns(), columnIndices));
+    }
+
+    /**
+     * Create virtual table containing only the columns specified by {@code
+     * columnIndices}.
+     * <p>
+     * The order or the columns in the new table is the same as the order of
+     * columns in this table. (The order of {@code columnIndices} does not
+     * matter.)
+     *
+     * @param columnIndices indices of the columns to keep. may be in any order and contain duplicates.
+     * @return virtual table containing only the specified columns
+     */
+    public VirtualTable keepOnlyColumns(final int... columnIndices) {
+        return selectColumns(indicesAfterKeepOnly(columnIndices));
     }
 
     public VirtualTable slice(final long from, final long to) {
         final TableTransformSpec transformSpec = new SliceTransformSpec(from, to);
-        return new VirtualTable(new TableTransform(List.of(m_transform), transformSpec), m_schema);
+        return new VirtualTable(new TableTransform(m_transform, transformSpec), m_schema);
     }
 
     public VirtualTable map(final int[] columnIndices, final MapperFactory mapperFactory) {
         final TableTransformSpec transformSpec = new MapTransformSpec(columnIndices, mapperFactory);
-        return new VirtualTable(new TableTransform(List.of(m_transform), transformSpec), mapperFactory.getOutputSchema());
+        return new VirtualTable(new TableTransform(m_transform, transformSpec), mapperFactory.getOutputSchema());
     }
 
     /**
@@ -240,7 +293,13 @@ public final class VirtualTable {
      */
     public VirtualTable filterRows(final int[] columnIndices, final RowFilterFactory filterFactory) {
         final TableTransformSpec transformSpec = new RowFilterTransformSpec(columnIndices, filterFactory);
-        return new VirtualTable(new TableTransform(List.of(m_transform), transformSpec), m_schema);
+        return new VirtualTable(new TableTransform(m_transform, transformSpec), m_schema);
+    }
+
+    // TODO: Should this take TargetTableProperties analogous to SourceTableProperties
+    public VirtualTable materialize(final UUID sinkIdentifier) {
+        final MaterializeTransformSpec transformSpec = new MaterializeTransformSpec(sinkIdentifier);
+        return new VirtualTable(new TableTransform(m_transform, transformSpec), ColumnarSchema.of());
     }
 
     public VirtualTable resolveSources(final Map<UUID, VirtualTable> sourceMap) {
@@ -251,58 +310,87 @@ public final class VirtualTable {
         return new VirtualTable(reSourcedTransform, m_schema);
     }
 
-    //    /**
-    //     * @param destination The {@link WriteAccessRow} of the destination must be compatible to the {@link #getSchema()
-    //     *            schema} of this instance. The destination must be {@link Cursor#close() closed} by the caller of this
-    //     *            method.
-    //     */
-    //    public void copy(final Cursor<WriteAccessRow> destination) throws IOException {
-    //        // TODO: optimize graph
-    //        try (final RowAccessible transformedTable = new TableTransformer(m_transform).transform()) {
-    //            try (final Cursor<ReadAccessRow> source = transformedTable.createCursor()) {
-    //                final ReadAccessRow readAccess = source.access();
-    //                final WriteAccessRow writeAccess = destination.access();
-    //                while (source.forward() && destination.forward()) {
-    //                    writeAccess.setFrom(readAccess);
-    //                }
-    //            }
-    //        }
-    //    }
-}
 
-/* optimize append columns:
 
-// TODO: at the moment, tables and schemas need to be simplified separately (below, only the table is
-// simplified; simplification of the schema would have to be done in its respective constructor).
-// How to get rid of this redundancy? Build schema graph first, optimize, and then build table graph based upon
-// the optimized schema graph? That is, virtual tables would not be aware of any optimization mechanisms.
-final List<RowAccessible> tmp = new ArrayList<>();
-for (final RowAccessible t : tables) {
-    if (t instanceof AppendedTable) {
-        final RowAccessible[] innerTables = ((ConcatenatedTable)t).getInnerTables();
-        for (final RowAccessible inner : innerTables) {
-            tmp.add(inner); // NOSONAR
-        }
-    } else {
-        tmp.add(t);
+    // TODO (TP) Implement RowIndex propagation.
+    //      (*) MapperWithRowIndexFactory should probably get the actual row index from a Source node?
+    //      (*) How to handle sliced Sources? Should indices start at 0 or at slice.from?
+    //      (*) Add a signature
+    //          VirtualTable.map(int[], MapperWithRowIndexFactory, VirtualTable),
+    //          where the VirtualTable argument specifies which VirtualTable the row index should be taken from.
+    //          Then the method below would be equivalent to
+    //          VirtualTable.map(int[] c, MapperWithRowIndexFactory f) {
+    //              return map(c,f,this);
+    //          }
+    public VirtualTable map(final int[] columnIndices, final MapperWithRowIndexFactory mapperFactory) {
+        return map(columnIndices, wrapAsMapperFactory(mapperFactory));
+    }
+
+    // FIXME This is a hack that only works because the comp graph is processed sequentially.
+    //       Implement proper RowIndex propagation instead.
+    private static MapperFactory wrapAsMapperFactory(final MapperWithRowIndexFactory factory) {
+        return new MapperFactory() {
+            @Override
+            public ColumnarSchema getOutputSchema() {
+                return factory.getOutputSchema();
+            }
+
+            @Override
+            public Runnable createMapper(ReadAccess[] inputs, WriteAccess[] outputs) {
+                Mapper mapper = factory.createMapper(inputs, outputs);
+                return new Runnable() {
+                    private long m_rowIndex = 0;
+
+                    @Override
+                    public void run() {
+                        mapper.map(m_rowIndex);
+                        m_rowIndex++;
+                    }
+                };
+            }
+        };
+    }
+
+
+
+    // TODO (TP) Implement ProgressTransformSpec handling.
+    //      As a workaround, we use a RowFilter that always evaluates to {@code
+    //      true} but this should be fixed, because it stands in the way of
+    //      optimizations, destroys lookahead capability for no reason, etc...
+    public VirtualTable progress(final int[] columnIndices, final ProgressListenerFactory factory) {
+        final TableTransformSpec transformSpec = new RowFilterTransformSpec(columnIndices, wrapAsRowFilterFactory(factory));
+        return new VirtualTable(new TableTransform(m_transform, transformSpec), m_schema);
+    }
+
+    private static RowFilterFactory wrapAsRowFilterFactory(ProgressListenerFactory factory) {
+        return inputs -> {
+            Runnable progress = factory.createProgressListener(inputs);
+            return () -> {
+                progress.run();
+                return true;
+            };
+        };
+    }
+
+    public VirtualTable progress(final int[] columnIndices, final ProgressListenerWithRowIndexFactory factory) {
+        return progress(columnIndices, wrapAsProgressListenerFactory(factory));
+    }
+
+    private static ProgressListenerFactory wrapAsProgressListenerFactory(final ProgressListenerWithRowIndexFactory factory) {
+        return new ProgressListenerFactory() {
+            @Override
+            public Runnable createProgressListener(ReadAccess[] inputs) {
+                ProgressListener progress = factory.createProgressListener(inputs);
+                return new Runnable() {
+                    private long m_rowIndex = 0;
+
+                    @Override
+                    public void run() {
+                        progress.update(m_rowIndex);
+                        m_rowIndex++;
+                    }
+                };
+            }
+        };
     }
 }
-
-*/
-
-/* optimize concatenate:
-
-// TODO
-//        final List<RowAccessible> tmp = new ArrayList<>();
-//        for (final RowAccessible t : tables) {
-//            if (t instanceof ConcatenatedTable) {
-//                final RowAccessible[] innerTables = ((ConcatenatedTable)t).getInnerTables();
-//                for (final RowAccessible inner : innerTables) {
-//                    tmp.add(inner); // NOSONAR
-//                }
-//            } else {
-//                tmp.add(t);
-//            }
-//        }
-
-*/
